# adif2json

./: .envrc  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  requirements.dev.txt  requirements.txt  setup.py  shell.nix
adif2json/: adif.py  adif2JSON.py  adif2json.py  json.py  json2adif.py
profiling/: direct.prof  monoid.prof  simpler.prof  single.prof  test.prof
src/adif2json/: __main__.py  adif.py  adif2JSON.py  json.py  parser.py
tests/: test_convert_and_back.py
tests/adif/: test_basic_adif.py  test_fields.py  test_found_adif.py  test_meta.py  test_read_field.py  test_read_label.py  test_reasons.py
tests/json/: test_basic_json.py
tests/parser/: '  test_direct_parser.py  test_discard.py  test_fun_parser.py  test_initial_state.py  test_iter_finder.py  test_iter_finder_stream.py  test_name_state.py  test_parse_delimiters.py  test_parse_fields.py  test_parse_label.py  test_position_changes.py  test_read.py  test_read_field.py  test_read_n.py  test_remainder.py  test_size_state.py  test_tipe_state.py  test_value_state.py
