[tool.poetry]
name = "adif2json"
version = "0.1.0"
description = "convert adif files to json files and return"
authors = ["Cesar Gallego <gallego.cesar@gmail.com>"]

[project]
name = "adif2json"
version = "0.1.0"
description = "convert adif files to json files and return"
authors = [
  {
    name = "Cesar Gallego",
    email = "gallego.cesar@gmail.com"
  }
]

[tool.setuptools.packages.find]
exclude = [
    { path = "profiling" }
]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "*"
chardet = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
snakeviz = "^2.2.0"

[tool.poetry.scripts]
adif2json = "adif2json.__main__:adif2json"
json2adif = "adif2json.__main__:json2adif"
